--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   url_strategy: ^0.2.0
   dio: ^5.4.3+1
+  image_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
