--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   url_strategy: ^0.2.0
   dio: ^5.4.3+1
   image_picker: ^1.1.1
+  dio_cookie_manager: ^3.1.1
+  get_storage: ^2.1.1
   
 
 dev_dependencies:
