--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.1
   dio_cookie_manager: ^3.1.1
   get_storage: ^2.1.1
+  intl: ^0.19.0
   
 
 dev_dependencies:
