--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dio_cookie_manager: ^3.1.1
   get_storage: ^2.1.1
   intl: ^0.19.0
+  geolocator: 
+  geocoding:
   
 
 dev_dependencies:
